syntax = "proto3";

package klibisz.elastiknn;

option java_package = "com.klibisz.elastiknn.storage";

import "scalapb/scalapb.proto";
import "elastiknn/elastiknn.proto";

message StoredSparseBoolVector {
    string guava_bloom_filter_base64 = 1;
    repeated uint32 sorted_true_indices = 2 [(scalapb.field).collection_type="Array"];
    uint32 total_indices = 3;
}

message StoredElastiKnnVector {
    oneof vector {
        FloatVector float_vector = 1;
        StoredSparseBoolVector sparse_bool_vector = 2;
    }
}